src/styles/records.css
.records {
  background-color: hsl(220, 11%, 95%);
  display: flex;
  justify-content: space-between;
  height: 100vh;
  width: 100vw;

  .records-main {
    margin: 0px auto;
    display: flex;
    width: 86.5vw;

    flex-direction: column;
    gap: 16px;
    align-items: center;
    position: relative;

    .records-container {
      display: flex;
      flex-direction: column;
      background-color: #ffff;
      justify-content: center;
      align-items: center;
      width: 85.5vw;
      padding: 10px;
      gap: 25px;
      border-radius: 10px;

      .top {
        display: flex;
        justify-content: space-between;
        width: 85.5vw;
        align-items: center;
        border-top-left-radius: 5px;
        border-top-right-radius: 5px;
        background-color: #fff;
        padding: 10px;
        padding-left: 20px;

        .container-title {
          width: 20vw;
          font-size: 18px;
          margin: 15px;
        }

        .filterbill {
          display: flex;
          justify-content: center;
          align-items: center;
          gap: 5px;
          height: 4vh;
          width: 20vw;
          padding: 5px;
          color: #5d6679;
          background-color: #fff;
          border: 1px solid #d0d3d9;
          outline: none;
          cursor: pointer;
          border-radius: 4px;
        }

        .addbillbtn {
          display: flex;
          justify-content: center;
          align-items: center;
          height: 4vh;
          width: 20vw;
          color: #fff;
          background-color: #1570ef;
          border: none;
          outline: none;
          cursor: pointer;
          border-radius: 4px;
        }
      }
    }
  }

  .overlay {
    background: #3756828e;
    position: fixed;
    width: 100vw;
    height: 100vh;
    z-index: 10;
  }

  .forms {
    display: flex;
    flex-direction: column;

    
  }

  .double {
    display: flex;
    justify-content: start;
    gap: 70px;

    .for {
      display: flex;
      flex-direction: column;
    }
  }

  .addform {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #fff;
    z-index: 11;
    padding: 40px;
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);

    .summary {
      margin-left: 50px;
      background-color: rgb(233, 233, 233);
      height: fit-content;
      border-radius: 8px;
      padding: 20px;
      margin-top: 40px;

      p {
        padding: 3px;
      }

      h2 {
        font-weight: 600;
        font-size: 24px;
        margin-bottom: 10px;
      }
      .add-btn {
        justify-content: center;
        align-items: center;
        color: #fff;
        padding: 10px;
        margin-top: 20px;
        background-color: #1570ef;
        border: none;
        outline: none;
        cursor: pointer;
        width: 300px;
        height: 45px;
        border-radius: 6px;
      }
    }

    .title {
      font-size: 24px;
      font-weight: 500;

    }

    .closebtn {
      position: absolute;
      top: 20px;
      right: 20px;
      background-color: transparent;
      border: none;
      cursor: pointer;

      img {
        width: 15px;
      }
    }

    .left {
      label {
        padding: 10px;
        font-size: medium;
        font-weight: 450;
      }

      input {
        padding: 10px;
        width: 291px;
        border-radius: 6px;
        border: 1px solid grey;
      }

      .tdsselect {
        padding: 10px;
        width: 291px;
        border-radius: 6px;
        border: 1px solid grey;
      }
    }

    label {
      margin-left: -10px;
    }
    .single {
      flex-direction: row;

      .for {
        display: flex;
        flex-direction: column;
      }
      .right {
        display: flex;
        flex-direction: column;

        h2 {
          margin: 0;
          font-size: 20px;
        }
      }
    }
  }

  .select-wrapper {
    width: 650px;
  }

  .react-select-container {
    width: 650px;
  }

  .react-select__control {
    min-height: 650px;
  }

  .react-select__value-container {
    padding: 8px 8px;
  }

  .react-select__input {
    margin: 0;
    padding: 0;
  }
}

